# cloudflare_worker_rust_template

./: .gitignore  Cargo.toml  LICENSE  Readme.md  build.rs  package-lock.json  tailwind.config.js  wrangler.toml
src/: app_state.rs  handlers.rs  internal_macro.rs  lib.rs
templates/: about.html  index.html
