[package]
name = "website"
version = "0.1.0"
edition = "2021"
authors = [ "Mohammad Afiq <46773936+afiqzx@users.noreply.github.com>" ]

[package.metadata.release]
release = false
#release = true

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
#wasm-opt = [ '-O4' ]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http', 'axum'] }
worker-macros = { version="0.2.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
minijinja = { version = "2", features = [ 'loader' ] }
serde = { version = "1", features = [ 'derive' ] }

